--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #grad {
     background: linear-gradient(73.92deg, #0E557A 0%, #2F91BF 100%);
-  }
+  }  
 
 .unscrollable::-webkit-scrollbar {
     display: none;
@@ -8,6 +8,7 @@
 
 *{
     scroll-behavior: smooth;
+    margin:0;
 }
 
 .unscrollable {
@@ -28,10 +29,26 @@
 .firstPage{
     min-height: 100vh;
     position: relative;
+    
+}
+.firstPageBg{
+    background: linear-gradient(73.92deg, #0E557A 0%, #2F91BF 100%);
+    width: 100%;
+    height:100vh;
+    position:relative;
+    top:0px;
+    right:0px;
+    bottom:0px;
+    left:0px;
 }
 
 .secondPage{
     min-height: 100vh;
+}
+
+.secondPageBg{
+    min-height: 100vh;
+    background: #eef2ff;
 }
 
 .container{
