--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 #grad {
     background: linear-gradient(73.92deg, #0E557A 0%, #2F91BF 100%);
-  }  
+}  
 
 .unscrollable::-webkit-scrollbar {
     display: none;
@@ -9,84 +9,153 @@
 *{
     scroll-behavior: smooth;
     margin:0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .unscrollable {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-  }
-
-#fonted{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 500;
 }
 
-#fontedHarder{
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-}
+/* FIRST PAGE */
 
-.firstPage{
+.firstPage {
     min-height: 100vh;
-    position: relative;
-    
-}
-.firstPageBg{
     background: linear-gradient(73.92deg, #0E557A 0%, #2F91BF 100%);
-    width: 100%;
-    height:100vh;
-    position:relative;
-    top:0px;
-    right:0px;
-    bottom:0px;
-    left:0px;
 }
 
-.secondPage{
-    min-height: 100vh;
-}
-
-.secondPageBg{
-    min-height: 100vh;
-    background: #eef2ff;
-}
-
-.container{
+.landingTitle {
     position:absolute;
     left: 50%;
     top: 50%;
     margin: -100px 0 0 -80px;
 }
 
-#sinImg{
+.sinImage {
     position: absolute;
     width: 600px;
     height: 600px;
     left:-180px;
     top: -20px;
 
-    background: url(sinPNG.png);
+    background: url(images/sinPNG.png);
     background-repeat: no-repeat;
     background-size: contain;
     transform: rotate(71.23deg);
 }
 
-.footer{
-    position: fixed;
+.scrollText {
+    position: absolute;
+    margin-bottom: 20px;
     width:100%;
     bottom: 0;
+}
+
+.scrollTextLink {
     text-align: center;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 10px;
+    text-decoration: none;
 }
 
-.textButton{
+.scrollTextButton {
     background:none;
     border:none;
     margin:0;
     padding:0;
     cursor: pointer;
+}
+
+/* SECOND PAGE */
+
+.secondPage {
+    min-height: 50vh;
+    background: #eef2ff;
+}
+
+
+.secondPageFlex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 70px;
+    gap: 50px;
+}
+
+.secondPageTitle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.secondPageStats {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.secondPageStatsValue {
+    font-size: 30px;
+}
+
+
+/* THIRD PAGE */
+
+.thirdPage {
+    height: fit-content;
+    background: white;
+}
+
+.thirdPageFlex {
+    display: flex;
+    flex-direction: row;
+    padding-top: 90px;
+    padding-bottom: 110px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.thirdPageCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+}
+
+.thirdPageCardTitle {
+    margin-top: 20px;
+}
+
+.thirdPageFooter {
+    padding-top: 15px;
+    background-color: #0E557A;
+    height: 35px;
+    color: white;
+}
+
+.thirdPageFooterText {
+    font-size: 14px;
+    margin-left: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+    .thirdPageFlex{
+        flex-direction: column;
+        gap: 80px;
+    }
+
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+
+    .secondPageFlex {
+        padding-bottom: 40px;
+    }
 }
